<resources>

    <string name="app_name">Supermarket Plan</string>
    <string name="menu_settings">Settings</string>
    
    
    <!-- Main Activity -->
    <string name="main_activyty_title">Supermarket Plan</string>
    <string name="city">Місто</string>
    <string name="supermarket">Супермаркет</string>
    <string name="address">Адреса</string>
    <string name="button_show">Показати</string>
    
    <!-- Plan Activity -->
    <string name="description">Supermarket plan</string>
    
</resources>